# lb-foraging

./: .gitignore  LICENSE  README.md  learning-metrics-plot-plan.md  plan-learned-reprediction-gate.md  plan-stuck-edge-cases.md  plan-survival-simulation.md  pyproject.toml  references_opponent_modeling.txt  requirements.txt  saved_genome.pt  start.bat  tr_lbf.py  workbench.ipynb
.claude/: launch.json  settings.local.json
docs/: plan-row-based-nn-input.md
docs/plans/: 2026-03-13-game-app-design.md  2026-03-13-game-app.md
lbforaging/agents/: heuristic_agent.py
lbforaging/foraging/: environment.py
lbforaging/tests/: test_env.py
plans/: make-plan-stuck-edge-cases-to-a-cheeky-koala.md  plan-learned-reprediction-gate.md  plan-nn-architecture-viz.md
tr_lbf_addon/: __init__.py  agent.py  game_runner.py  lbf_elements.py  lbf_gym.py  map_generator.py  metrics_tracker.py  neuroevolution.py  run_the_game.py
tr_lbf_addon/app/: __init__.py  app.py  board_canvas.py  game_runner.py  param_panel.py
tr_lbf_addon/tests/: test_app_board_canvas.py  test_app_game_runner.py  test_game_runner_metrics.py  test_genome_persistence.py  test_lbf_elements.py  test_lbf_gym.py  test_map_generator.py  test_metrics_tracker.py  test_neuroevolution.py
web/backend/: metrics_serializer.py  serializer.py  server.py
web/frontend/: index.html  package-lock.json  package.json  vite.config.ts
web/frontend/src/: App.css  App.tsx
web/frontend/src/components/: GameBoard.tsx  SettingsPanel.tsx  StatusBar.tsx  Toolbar.tsx
web/frontend/src/constants/: agentColors.ts
(+7 files in other folders)
